fix drop menu on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -65,9 +65,6 @@ li{
     /* overflow: hidden; */
     margin: 0 auto;
 }
-nav {
-    /* border-bottom: 1px solid #333; */
-}
 nav a {
     float: left;
     display: block;
@@ -84,7 +81,8 @@ nav a {
     bottom: -2px;
     right: -2px;
 }
-.dropdown .site-btn:hover::before {
+.dropdown .site-btn:hover::before,
+.dropdown .site-btn:focus::before  {
     bottom: -7px;
     right: -7px;
 }
@@ -110,8 +108,8 @@ nav a {
     -moz-transition: all 0.3s;
     -webkit-transition: all 0.3s;
 }
-.dropdown:hover .dropdown-content {
-    display: block;
+.show {
+    display: block !important;
 }
 .dropdown .dropdown-content a:hover {
     background-color: salmon;
